tests/fail/ch_nightly/invalid_type_in_placeholder.stderr
error: Unknown format option: ':vec::Vec<usize>'.
       Hint: Paths (or anything with a ':') are not allowed in the type inside of a placeholder.
       Put the path in the arguments behind the format string or `use` the type
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:17:32
   |
17 |     sscanf::scanf!("hi", "{std::vec::Vec<usize>}");
   |                                ^^^^^^^^^^^^^^^^

error: Unknown format option: ':NoFromStr'.
       Hint: Paths (or anything with a ':') are not allowed in the type inside of a placeholder.
       Put the path in the arguments behind the format string or `use` the type
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:18:35
   |
18 |     sscanf::scanf!("hi", "{module::NoFromStr}");
   |                                   ^^^^^^^^^^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:24:28
   |
24 |     sscanf::scanf!("hi", "{3}");
   |                            ^

error: Invalid type in placeholder: expected identifier.
       Hint: The syntax for placeholders is {<type>} or {<type>:<config>}. Make sure <type> is a valid type.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:25:28
   |
25 |     sscanf::scanf!("hi", "{.}");
   |                            ^

error: Invalid type in placeholder: expected identifier.
       Hint: The part before the ':' is interpreted as a type with no checks done by scanf.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:27:28
   |
27 |     sscanf::scanf!("hi", "{3:/hi/}");
   |                            ^

error: Invalid type in placeholder: expected identifier.
       Hint: The part before the ':' is interpreted as a type with no checks done by scanf.
       If you want syntax highlighting and better errors, place the type in the arguments after the format string while debugging
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:28:28
   |
28 |     sscanf::scanf!("hi", "{.:/hi/}");
   |                            ^

error[E0412]: cannot find type `bob` in this scope
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:26:5
   |
26 |     sscanf::scanf!("hi", "{bob}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `bob` in this scope
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:29:5
   |
29 |     sscanf::scanf!("hi", "{bob:/hi/}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
   = note: this error originates in the macro `sscanf::scanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: any use of this value will cause an error
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:26:5
   |
26 |     sscanf::scanf!("hi", "{bob}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this error originates in the macro `$crate::pmr::__concatcp_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:26:5
   |
26 |     sscanf::scanf!("hi", "{bob}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `__cf_osRcTFl4A::__concatcp_inner` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoRegex: RegexRepresentation` is not satisfied
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:21:28
   |
21 |     sscanf::scanf!("hi", "{NoRegex}");
   |                            ^^^^^^^ the trait `RegexRepresentation` is not implemented for `NoRegex`
   |
   = help: the following other types implement trait `RegexRepresentation`:
             FullF32
             FullF64
             HexNumber
             NoFromStr
             NonZeroI128
             NonZeroI16
             NonZeroI32
             NonZeroI64
           and 27 others

error: any use of this value will cause an error
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:21:5
   |
21 |     sscanf::scanf!("hi", "{NoRegex}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this error originates in the macro `$crate::pmr::__concatcp_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> tests/fail/ch_nightly/invalid_type_in_placeholder.rs:21:5
   |
21 |     sscanf::scanf!("hi", "{NoRegex}");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: this error originates in the macro `__cf_osRcTFl4A::__concatcp_inner` (in Nightly builds, run with -Z macro-backtrace for more info)
